fix not showing icon

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -28,7 +28,7 @@ a,
   }
 
   #app {
-    display: block;
+    display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
